# gctest

./: .gitignore  build-gctest-core.sh  build-gctest-tutorial.sh  test-gctest-tutorial.sh
gctest-core/: Bug.txt  CMakeLists.txt  Config.cmake.in  Improvement.txt  LICENSE  TODO.txt  build.sh  release-arm32.sh  release-arm64.sh  release-local.sh  release.sh  test-arm32.sh  test-arm64.sh  test-local.sh  test.sh  zdelete.sh  zdeploy.sh  zrelease.sh  ztest.sh
gctest-core-test/: CMakeLists.txt
gctest-core-test/test_fail/: CMakeLists.txt  test_1.cpp
gctest-core-test/test_pass/: CMakeLists.txt  test_2.cpp
gctest-core/cmake/: gctest.toolchain.arm32.cmake  gctest.toolchain.arm64.cmake  gctest.toolchain.local.cmake
gctest-core/include/gctest/core/: assertion.hpp  exception.hpp  executor.hpp  gctest.hpp  gctest_assertion.hpp  gctest_exception.hpp  gctest_executor.hpp  gctest_macro.hpp  gctest_registery.hpp  gctest_type.hpp  macro.hpp  source_location.hpp  test.hpp  type.hpp
gctest-core/package/: gctest-core-1.0.8-1.x86_64.rpm  gctest-core_1.0.8_amd64.deb  gctest-core_1.0.8_arm.deb  gctest-core_1.0.8_arm32.deb  gctest-core_1.0.8_arm64.deb
gctest-core/source/: assertion.cpp  executor.cpp  main.cpp  type.cpp
gctest-core/source/gctest/core/: assertion.cpp  exception.cpp  executor.cpp  gctest_exception.cpp  gctest_executor.cpp  gctest_main.cpp  gctest_registery.cpp  gctest_type.cpp  type.cpp
gctest-core/test/: CMakeLists.txt  error_test_case.cpp  exception_test_case.cpp  failed_assertion_test_case.cpp  successful_assertion_test_case.cpp  test_config.cpp  test_full_structor.cpp  test_main.cpp  test_suit_assertion.cpp  test_suit_config.cpp  test_suit_error_core.cpp  test_suit_exception.cpp  test_suit_full_structor.cpp  test_suit_full_structure.cpp  test_suit_main.cpp  test_suit_priority.cpp  test_suite_fail.cpp
gctest-tutorial/: CMakeLists.txt  build.sh  test.sh
gctest-tutorial/source/: test.cpp
